--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <section id="habilidades" class="habilidades">
       <div class="habilidades-header">
         <h1 class="habilidades-titulo">
-          Minhas <br />
-          <span>Habilidades</span>.
+          Minhas  
+          <br/> <span>Habilidades</span>.
         </h1>
         <p class="habilidades-description">
           Ao lado estão as <span>tecnologias</span> e <br />
